# news_scrape

cpp_scrape_consumer/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  conanfile.txt  configure.sh  summarazier
cpp_scrape_consumer/src/: main.cpp
cpp_scrape_consumer/src/config/: config.cpp  config.h
cpp_scrape_consumer/src/db/: postgres_client.cpp  postgres_client.h
cpp_scrape_consumer/src/http/: http_client.cpp  http_client.h
cpp_scrape_consumer/src/reader/: input_reader.cpp  input_reader.h
go_news_scrape/: go.mod  go.sum  main.go
go_news_scrape/config/: config.go
go_news_scrape/database/: database.go
go_news_scrape/handler/: handler.go  post.go  source.go  source_type.go  user.go
go_news_scrape/middleware/: middleware.go
go_news_scrape/model/: post.go  raw_post.go  source.go  source_type.go  topic.go  user.go
go_news_scrape/router/: route.go
r_scraper/: .gitignore  Cargo.toml  README.md
r_scraper/src/: config.rs  db.rs  logger.rs  main.rs  parsing.rs  web_driver.rs
r_scraper/src/db/: raw_post.rs  source.rs
r_scraper/src/parsing/: html.rs
