[package]
name = "r_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.14"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "derive",
    "chrono",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
